--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/open-sans": "^5.0.28",
     "@fontsource/raleway": "^5.0.19",
     "framer-motion": "^11.2.6",
+    "gsap": "^3.12.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
